[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/load_game.escn" type="PackedScene" id=1]
[ext_resource path="res://scenes/load_game.gd" type="Script" id=2]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.0906078, 0.229593, 0.749115 )

[node name="load_game" index="0" instance=ExtResource( 1 )]
script = ExtResource( 2 )
text_path = "Text016"

[node name="StaticBody" type="StaticBody" parent="." index="1"]

[node name="CollisionShape" type="CollisionShape" parent="StaticBody" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0843713, -0.751697 )
shape = SubResource( 1 )
[connection signal="input_event" from="StaticBody" to="." method="_on_StaticBody_input_event"]
[connection signal="mouse_entered" from="StaticBody" to="." method="_on_StaticBody_mouse_entered"]
[connection signal="mouse_exited" from="StaticBody" to="." method="_on_StaticBody_mouse_exited"]
